--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="emoji">🌤</div>
@@ -52,5 +53,6 @@
       <p></p>
       <p>Coded by Hickmatu Mohammed</p>
     </ul>
+    <script src="index.js"></script>
   </body>
 </html>
