updated css, html

--- a/index.html
+++ b/index.html
@@ -8,51 +8,29 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="emoji">🌤</div>
-    <h1>Currently 21° in Tokyo</h1>
-    <br />
-    <h2 class="light">
-      13° /
-      <strong>23°</strong>
-    </h2>
-    <br />
-
+      <h1>
+      🌤
+      <br />
+      Currently 21° in Tokyo
+    </h1>
+    <h2>13° / <strong>23°</strong></h2>
     <ul>
-      <div class="hover-1">
-        <li>
-          <h3>🌧Tomorrow</h3>
-        </li>
-        <li>
-          10° /
-          <strong>22°</strong>
-        </li>
-      </div>
-      <br />
-      <div class="hover-2">
-        <li>
-          <h3>🌥 Saturday</h3>
-        </li>
-
-        <li>
-          15° /
-          <strong>17°</strong>
-        </li>
-      </div>
-      <br />
-      <div class="hover-3">
-        <li>
-          <h3>☀️ Sunday</h3>
-        </li>
-        <li>
-          25° /
-          <strong>28°</strong>
-        </li>
-      </div>
-      <br />
-      <button>Change city</button>
-      <p></p>
-      <p>Coded by Hickmatu Mohammed</p>
+      <li>
+        <h3>🌧Tomorrow</h3>
+        <p>10° / <strong>22°</strong></p>
+      </li>
+      <li>
+        <h3>🌥 Saturday</h3>
+        <p>15° / <strong>17°</strong></p>
+      </li>
+      <li>
+        <h3>☀️ Sunday</h3>
+        <p>25° / <strong>28°</strong></p>
+      </li>
     </ul>
+
+    <button>Change city</button>
+    <p>Coded by Hickmatu Mohammed</p>
     <script src="index.js"></script>
   </body>
 </html>
